Update WeatherGUI.java